{
    "name": "InputActions",
    "maps": [
        {
            "name": "MobileInput",
            "id": "73d6267d-17e6-40d7-9b30-c631eee0c631",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "9dfc2b9a-080e-4f71-a306-f5189c4483ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragStarted",
                    "type": "Button",
                    "id": "cc58d600-d03d-4964-bbc4-3f9aab040b47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e8f999f-2eab-49eb-99e8-a626c3f65cec",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acb63572-b426-4464-bec1-e3abcd8e1dff",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "DragStarted",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PcInput",
            "id": "ad5365fb-09b4-4040-93e3-b4f70b036159",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "01694a6c-604a-49bb-9d67-0e70952dbdd7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragStarted",
                    "type": "Button",
                    "id": "80256e1c-efc0-48a5-a761-d928fbb3cccf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "fa756605-4c5b-4a0b-aa90-c738ab225115",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4db8b24c-98b5-49cf-8fb1-d52e537c99e7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9fabc8c-94ad-490d-ab2f-201da41d1721",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "DragStarted",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8967a709-e08f-4628-b18a-a5e7e41dd987",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}